unpackaged/main/default/objects/Opportunity_Batch__c/Opportunity_Batch__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting will hold the opportunity batch parameters such as group size, Region or Partner.</description>
    <label>Opportunity Batch</label>
</CustomObject>