unpackaged/main/default/objects/Opportunity_Batch__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This will mark if you want to run batch for this custom setting.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>