unpackaged/main/default/objects/Opportunity_Batch__c/fields/API_Name_of_field__c.field-meta.xml
<CustomField>
    <fullName>API_Name_of_field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>API Name of field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>