unpackaged/main/default/objects/Opportunity_Batch__c/fields/Blue_Partner_Id__c.field-meta.xml
<CustomField>
    <fullName>Blue_Partner_Id__c</fullName>
    <description>This filed will hold the blue partner Id.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Blue Partner Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>