unpackaged/main/default/objects/Opportunity_Batch__c/fields/Group_Size_Lower_Limit__c.field-meta.xml
<CustomField>
    <fullName>Group_Size_Lower_Limit__c</fullName>
    <description>This field is being used in the opportunity batch.</description>
    <label>Group Size Lower Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>