unpackaged/main/default/objects/Opportunity_Batch__c/fields/Group_Size_Upper_Limit__c.field-meta.xml
<CustomField>
    <fullName>Group_Size_Upper_Limit__c</fullName>
    <description>This field will contain the group size limit for blue partner or region.</description>
    <label>Group Size Upper Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>