unpackaged/main/default/objects/Opportunity_Batch__c/fields/Months_In_Advance__c.field-meta.xml
<CustomField>
    <fullName>Months_In_Advance__c</fullName>
    <description>This field will used in batch as number of months in advance of the group anniv date.</description>
    <label>Months In Advance</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>