unpackaged/main/default/objects/Opportunity_Batch__c/fields/Number_of_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Opportunities__c</fullName>
    <description>This field is being used in opportunity batch.</description>
    <label>Number of Opportunities</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>